--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "sebamaster-movie-frontend",
+  "name": "karmadillo-frontend",
   "version": "0.0.1",
-  "description": "SEBAMaster Movie Frontend Application React",
+  "description": "Karmadillo Frontend Application React",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/sebischair/sebamaster-movie-frontend"
+    "url": "https://github.com/timellado/karmadillo-frontend"
   },
-  "author": "sebis",
-  "license": "MIT",
+  "author": "timellado",
+  "license": "PUC",
   "bugs": {
-    "url": "https://github.com/sebischair/sebamaster-movie-frontend/issues"
+    "url": "https://github.com/timellado/karmadillo-frontend/issues"
   },
-  "homepage": "https://github.com/sebischair/sebamaster-movie-frontend#readme",
+  "homepage": "https://github.com/timellado/karmadillo-frontend#readme",
   "engines": {
     "node": ">=4.3"
   },
@@ -23,22 +23,25 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.17",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "3.0.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
-    "style-loader": "0.19.0",
+    "style-loader": "^0.19.0",
     "webpack": "3.3.0",
     "webpack-dev-server": "2.9.1",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
+    "file-loader": "^6.0.0",
+    "image-webpack-loader": "^6.0.0",
     "react": "16.8.4",
     "react-dom": "16.8.4",
-    "react-router-dom": "4.2.2",
     "react-md": "1.2.11",
-    "webfontloader": "1.6.28",
-    "styled-components": "3.1.6"
+    "react-router-dom": "4.2.2",
+    "styled-components": "3.1.6",
+    "url-loader": "^4.1.0",
+    "webfontloader": "1.6.28"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
