--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
     "file-loader": "^6.0.0",
     "image-webpack-loader": "^6.0.0",
     "react": "16.8.4",
