--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@material-ui/icons": "^4.9.1",
     "file-loader": "^6.0.0",
     "image-webpack-loader": "^6.0.0",
+    "moment": "^2.27.0",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-md": "1.2.11",
