--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "image-webpack-loader": "^6.0.0",
     "moment": "^2.27.0",
     "react": "16.8.4",
+    "react-datepicker": "^3.1.3",
     "react-dom": "16.8.4",
     "react-md": "1.2.11",
     "react-router-dom": "4.2.2",
