--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "cloudinary-react": "^1.6.2",
     "file-loader": "^6.0.0",
     "image-webpack-loader": "^6.0.0",
     "moment": "^2.27.0",
