--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "16.8.4",
     "react-md": "1.2.11",
     "react-router-dom": "4.2.2",
+    "react-search-field": "^1.0.0",
     "styled-components": "3.1.6",
     "url-loader": "^4.1.0",
     "webfontloader": "1.6.28"
